# ml-job-manager

./: .gitignore  LICENSE  README.md  docker-compose.yml
ml-job-api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
ml-job-api/scripts/: entrypoint.sh
ml-job-api/src/: main.py
ml-job-api/src/common/: errors.py  models.py  utils.py
ml-job-api/src/files/: entities.py  repository.py  service.py  utils.py
ml-job-api/src/files/api/: __init__.py  dependencies.py  rest.py
ml-job-api/src/files/errors/: __init__.py  already_exist.py  not_exist.py
ml-job-api/src/files/params/: __init__.py  list.py  locate.py
ml-job-api/src/files/repositories/: __init__.py  lfs.py
ml-job-api/src/files/resources/: __init__.py  api.py  entity.py
ml-job-api/src/files/serializers/: __init__.py  list.py  read.py  summarize.py
ml-job-api/src/infrastructure/: clients.py  storages.py
ml-job-api/src/jobs/: entity.py  queue.py  repository.py  service.py
ml-job-api/src/jobs/api/: __init__.py  dependencies.py  rest.py
ml-job-api/src/jobs/clients/: __init__.py  celery.py
ml-job-api/src/jobs/dto/: __init__.py  create.py  edit.py  end.py  initialize.py  start.py  update.py
ml-job-api/src/jobs/errors/: __init__.py  not_exist.py  phase_conflict.py
ml-job-api/src/jobs/models/: __init__.py  postgres.py
ml-job-api/src/jobs/params/: __init__.py  list.py
ml-job-api/src/jobs/repositories/: __init__.py  postgres.py
ml-job-api/src/jobs/resources/: __init__.py  api.py  entity.py
ml-job-api/src/jobs/serializers/: __init__.py  list.py  read.py  summarize.py
ml-job-api/src/jobs/types/: __init__.py  end_action.py  job.py  phase.py  process_action.py
ml-job-api/src/labellings/: entity.py  repository.py  service.py
ml-job-api/src/labellings/api/: __init__.py  dependencies.py  rest.py
ml-job-api/src/labellings/dto/: __init__.py  create.py  edit.py  initialize.py  update.py
ml-job-api/src/labellings/errors/: __init__.py  absent_job.py  (+2 more)
ml-job-api/src/migrations/: env.py
ml-job-api/src/settings/: app.py
ml-job-api/src/spectra/: entity.py  repository.py  service.py  utils.py
ml-job-worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
ml-job-worker/scripts/: entrypoint.sh
ml-job-worker/src/: main.py
ml-job-worker/src/active_ml/: __init__.py  cnn_model.py  config.py  file_utils.py  job.py
ml-job-worker/src/common/: utils.py
ml-job-worker/src/data_preprocessing/: __init__.py  config.py  job.py  utils.py
ml-job-worker/src/infrastructure/: clients.py  storages.py
ml-job-worker/src/settings/: app.py
(+117 files in other folders)
