[project]
name = "ml-job-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Burakov",email = "bursasha1201@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-restful (>=0.6.0,<0.7.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "celery (>=5.5.0,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "astropy (>=7.0.1,<8.0.0)",
    "aioshutil (>=1.5,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py313"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
ensure_newline_before_comments = true
indent = 4
lines_after_imports = 2
lines_between_types = 0
use_parentheses = true


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
