[project]
name = "ml-job-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Burakov",email = "bursasha1201@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "astropy (>=7.0.1,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "imblearn (>=0.0,<0.1)",
    "tensorflow[and-cuda] (==2.16.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py313"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
ensure_newline_before_comments = true
indent = 4
lines_after_imports = 2
lines_between_types = 0
use_parentheses = true


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
